src/test/deca/context/invalid/selection-protectedSoImpossible.context
selection-protectedSoImpossible.deca:10: